--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>MEREL</title>title
+  <title>MEREL</title>
 </head>
 <body>
-  <h1>Il miglior sito è in fase di elaborazione, presto sarà disponibile</h1>h1
+  <h1>Il miglior sito è in fase di elaborazione, presto sarà disponibile</h1>
 </body>
 </html>
