--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>MEREL</title>
+  <link rel="icon" href="C:\Users\merelli.22307\Downloads\IMG_2467 (1).jpg" type="image/png">
 </head>
 <body>
   <h1>Il miglior sito è in fase di elaborazione, presto sarà disponibile</h1>
