--- a/index.html
+++ b/index.html
@@ -1,9 +1,26 @@
 <!DOCTYPE html>
-<html>
+<html lang="it">
 <head>
-  <title>MEREL</title>
+  <meta charset="UTF-8">
+  <title>Gioco del Tris</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1>Il miglior sito è in fase di elaborazione, presto sarà disponibile</h1>
+  <h1>Gioco del Tris</h1>
+  <div id="game">
+    <div class="cell" data-index="0"></div>
+    <div class="cell" data-index="1"></div>
+    <div class="cell" data-index="2"></div>
+    <div class="cell" data-index="3"></div>
+    <div class="cell" data-index="4"></div>
+    <div class="cell" data-index="5"></div>
+    <div class="cell" data-index="6"></div>
+    <div class="cell" data-index="7"></div>
+    <div class="cell" data-index="8"></div>
+  </div>
+  <p id="message"></p>
+  <button id="restart">Ricomincia</button>
+
+  <script src="script.js"></script>
 </body>
 </html>
