Refine comments in index.html
Updated comments for clarity in index.html.

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="it">
 <head>
   <meta charset="UTF-8"> <!-- Imposta la codifica caratteri -->
-  <title>Gioco del Tris</title> <!-- Titolo della pagina -->
+  <title>Gioco del Tris</title> <!-- Titolo -->
   <link rel="stylesheet" href="styles.css"> <!-- Collegamento al file CSS -->
 </head>
 <body>
@@ -10,7 +10,7 @@
 
   <!-- Contenitore della griglia del gioco (3x3) -->
   <div id="game">
-    <!-- Ogni div rappresenta una cella del tris e ha un indice univoco -->
+    <!-- Ogni div rappresenta una cella del tris e ha un indice -->
     <div class="cell" data-index="0"></div>
     <div class="cell" data-index="1"></div>
     <div class="cell" data-index="2"></div>
